--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/screenshot-2018-07-19-12.49.18-122x72.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/screenshot-2018-07-19-12.49.18-122x72.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com"></a></span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">how to develop your own website</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se/v">free html templates</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
