create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">free responsive web templates</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
@@ -167,7 +167,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            We want you to have everything you need in order to acheive your fitness goals, and we believe that tracking your goals is a huge part of fitness success. &nbsp;For first time &amp; regular customers we're happy to offer free meal &amp; supplement plans, free bodyfat analysis, free shaker cups, &amp; &nbsp;our free famous Nutrishop T-shirts to show that you've joined our movement!<br></p>
+                            We want you to have everything you need in order to acheive your fitness goals, and we believe that tracking your goals is a huge part of fitness success. &nbsp;For first time &amp; regular customers we're happy to offer free meal &amp; supplement plans, free bodyfat analysis, free shaker cups, &amp; &nbsp;our free famous Nutrishop T-shirts to show that you've joined our movement!<br><br>*Exclusions &amp; Limitations Apply</p>
                     </div>
                 </div>
 
