--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html#features12-4"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>
                         Why Nutrishop?</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features12-4"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span>Find A Location</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#social-buttons2-e"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>Connect With Us&nbsp;</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content5-5"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span>Find A Location</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#social-buttons2-e"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>Connect With Us&nbsp;</a></li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+15593762121"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
                     Call Now!</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se/m">website design templates</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
@@ -222,16 +222,16 @@
                         Our Locations</h2>
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_13" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_4" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_13" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>
                                     Palm &amp; Nees</h4>
                             </a>
                         </div>
-                        <div id="collapse1_13" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_13">
+                        <div id="collapse1_4" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>At the corner of Palm/Nees in the GB3 Shopping Center next to Eureka Burger</strong><strong><br></strong><a href="tel:+15593762121">(559) 376-2121</a><br>7775 North Palm Avenue #104<br>Fresno, CA 93711<br><strong><a href="https://www.google.com/maps/place/Nutrishop+Fresno/@36.850414,-119.806427,15z/data=!4m5!3m4!1s0x0:0x1cc2c21c89db7be5!8m2!3d36.8504145!4d-119.8064269?hl=en-US" target="_blank">Get Directions</a></strong></p>
                             </div>
@@ -239,13 +239,13 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_13" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Clovis</h4>
                             </a>
                             
                         </div>
-                        <div id="collapse2_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_13">
+                        <div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>At the Northwest corner of Fowler/Herndon Across The Street From Vons<br></strong><a href="tel:+15593221663">(559) 322-1663</a><br>1785 Herndon Ave Ste 104<br>Clovis, CA 93611<br><a href="https://www.google.com/maps/place/Nutrishop+Clovis/@36.838407,-119.684953,13z/data=!4m5!3m4!1s0x0:0x604383f2c2252f96!8m2!3d36.8384067!4d-119.6849528?hl=en-US" target="_blank">Get Directions</a></p>
                             </div>
@@ -253,12 +253,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_13" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="collapsed text-black panel-title" data-toggle="collapse" data-core="" href="#collapse3_4" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Herndon South</h4>
                             </a>
                         </div>
-                        <div id="collapse3_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_13">
+                        <div id="collapse3_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>At the corner of Milburn/Herndon in the Save Mart Shopping Center in front of GB3<br></strong><a href="tel:+15593762122">(559) 376-2122</a><br>6737 North Milburn Avenue #130<br>Fresno, CA 93722<br><a href="https://www.google.com/maps/place/Nutrishop+Milburn/@36.835186,-119.881022,15z/data=!4m5!3m4!1s0x0:0xaf8bc301b7334ce7!8m2!3d36.8351857!4d-119.8810216?hl=en-US" target="_blank">Get Directions</a></p>
                             </div>
@@ -266,12 +266,12 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFour">
-                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_13" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_4" aria-expanded="false" aria-controls="collapse4">
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Campus Pointe</h4>
                             </a> 
                         </div>
-                        <div id="collapse4_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_13">
+                        <div id="collapse4_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_4">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>The Square At Campus Pointe Between Yogurtland &amp; The Maya Cinemas<br></strong><a href="tel:+15599004367">(559) 900-4367</a><br>3064 E. Campus Pointe Dr<br>Fresno, CA 93710<br><a href="https://www.google.com/maps?ll=36.812392,-119.734863&z=15&t=m&hl=en-US&gl=US&mapclient=embed&cid=953333405944238570" target="_blank">Get Directions</a></p>
                             </div>
