create github pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37433972-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-37433972-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qYhff41h5M" once="menu" id="menu1-0">
 
     
@@ -63,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/d">free site maker</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
