--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">make a site for free</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
@@ -412,7 +412,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="211041378.727bfe1.45232309bff14b0fa9115052af6a5490" data-per-row-grid="4" id="instagram-feed-block-k" data-rv-view="29" style="background-image: url(assets/images/mbr-1920x1280.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="211041378.727bfe1.45232309bff14b0fa9115052af6a5490" data-per-row-grid="3" id="instagram-feed-block-k" data-rv-view="29" style="background-color: rgb(238, 178, 104); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
