create github pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se/k">develop your own website</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
@@ -418,7 +418,7 @@
         <div class="row">
             <div class="col">
                 <div class="inst">
-                    <h1 class="inst__title align-center mbr-fonts-style display-2">@NutrishopFresno</h1>
+                    <h1 class="inst__title align-center mbr-fonts-style display-2">INSTAGRAM @NutrishopFresno</h1>
                     <div class="inst__content"></div>
                     <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
                 </div>
