--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">free simple web templates</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
@@ -90,7 +90,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center py-2 mbr-bold mbr-fonts-style display-2">
-                        <br>#1 Nutrition Store<br>In Fresno &amp; Clovis!</h1>
+                        <br>#1 Nutrition Store<br>In The Central Valley!</h1>
                 <p class="mbr-text align-center py-2 mbr-fonts-style display-5">
                         Guaranteed Lowest Prices on Protein, Pre-Workout, Weight Loss, &amp; More!&nbsp;</p>
                 <div class="mbr-media show-modal align-center py-2" data-modal=".modalWindow">
