--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">how to build a site</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
+<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="header8 cid-qYhg450rlP mbr-fullscreen mbr-parallax-background" id="header8-1">
 
     
 
@@ -380,14 +380,14 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="1" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="211041378.727bfe1.45232309bff14b0fa9115052af6a5490" data-per-row-grid="3" id="instagram-feed-block-k" data-rv-view="163" style="background-image: url(assets/images/mbr-1-1920x1280.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="1" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="211041378.727bfe1.45232309bff14b0fa9115052af6a5490" data-per-row-grid="3" id="instagram-feed-block-k" data-rv-view="20" style="background-image: url(assets/images/mbr-1-1920x1280.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(35, 35, 35);">
     </div>
     <div class="container container_toggle">
         <div class="row">
             <div class="col">
                 <div class="inst">
-                    <h1 class="inst__title align-center mbr-fonts-style display-2">@NutrishopFresno</h1>
+                    <h1 class="inst__title align-center mbr-fonts-style display-2">Instagram<br>@nutrishopfresno</h1>
                     <div class="inst__content"></div>
                     <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
                 </div>
