--- a/fitness-help.html
+++ b/fitness-help.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section once="" class="cid-qYhJ33wf8P" id="footer6-m">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-qYhJ33wf8P" id="footer6-m">
 
     
 
@@ -342,7 +342,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VlS4FtA5iF69e81qfKRtcHU8hoW7K5QvnPytpx8jTd9zlPbIy+XsqDoWYk3QW6vJKID+MslN4tZqY2no17/9SCw2UbZyMdzJedVPNPWpqwSUuMXvNbRKhA5IBsygfD3W">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vi+n/O4cOjFRGRlRDOT73QONtOdQT0b/t4J0QCzdgcc3XYNPhfFRA4+O8Gx6b4cHH1QvpDronLtpWRM1w2yCDrckAfCayMZDg95Ssy2vyiWEkFFd03kLJBB2NKLaLLP6">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
