--- a/fitness-help.html
+++ b/fitness-help.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-u" data-rv-view="420" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-u" data-rv-view="420" style="background-color: rgb(0, 0, 0);">
 	<style>.block {padding-bottom:20px; padding-top:20px;}</style>		
             
 
@@ -355,7 +355,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MJVZnuwEXO7IKEmaZ/ZRBlRps31lRQUMy3UT328czBpPl7OolehGBtq0r0F5x65yrQ2Lqad07QEmkLHrbEvjw9kffFxX/jfBpwoy6mg4SSDbQYSMM9FQulDOxZA0u7Ob">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1XQupgAyp4YfypKuVDjQg5Y1urtw6SaOFla2S41YFHW7iorM8ihzwbb4V0WoHLu5pPXrN5zlahHvtlsTRvqJtqhAYw81aI3YVpRQZaI10RzkzdmeKJ8u3976YW9Iul0o">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
