--- a/index.html
+++ b/index.html
@@ -66,33 +66,20 @@
 				</div>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav nav-dropdown navbar-nav-top-padding" data-app-modern-menu="true">
-					<li class="nav-item">
-						<a class="nav-link link text-white display-4" href="#">
+				<ul class="navbar-nav nav-dropdown navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item">
+						<a class="nav-link link text-white text-primary display-4" href="index.html">
 							HOME</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link link dropdown-toggle text-white display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">
-							MENU</a>
-						<div class="dropdown-menu">
-							<a class="dropdown-item text-white display-4" href="#" aria-expanded="false">Sushi</a><a class="text-white dropdown-item display-4" href="#" aria-expanded="false">Pizza</a><a class="text-white dropdown-item display-4" href="#" aria-expanded="false">Thai Food</a>
-						</div>
-					</li>
+					
 					<li class="nav-item">
-						<a class="nav-link link text-white display-4" href="#">CONTACTS</a>
+						<a class="nav-link link text-white text-primary display-4" href="index.html#content01-14">ABOUT</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link link text-white display-4" href="#">
-							SHOP</a>
-					</li>
+						<a class="nav-link link text-white text-primary display-4" href="index.html#content5-w">LOCATIONS</a>
+					</li></ul>
 
-					<li class="nav-item">
-						<a class="nav-link link text-white display-4" href="#">HELP</a>
-					</li>
-				</ul>
-
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="#">ORDER ONLINE</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="https://www.nutrishopusa.com/store-referral/718">ORDER ONLINE</a></div>
 				
 			</div>
 		</div>
