add merchant tag

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   gtag('config', 'UA-37433972-1');
 </script> 
-  
+  <meta name="google-site-verification" content="_AR-ixI9u-HgTW_MWhGcMYXLVLOtO1gNTjEoxhq2ceE" />
 </head>
 <body>
 
